# birp

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
app/: Cargo.toml  Dioxus.toml
app_dx/: Cargo.toml  Dioxus.toml
app_dx/assets/: input-range.scss  main.scss
app_dx/src/: bevy_type.rs  main.rs  utils.rs
app_dx/src/components/: component_inspector.rs  connection.rs  entities_tool.rs  entity_inspector.rs  hierarchy_tree.rs  icon.rs  json_value.rs  mod.rs  resource_inspector.rs  resources_tool.rs  types_tool.rs
app_dx/src/components/component/: component_inspector.rs  component_value.rs  map_value.rs  mod.rs  value_bool.rs  value_entity.rs  value_number.rs  value_select.rs  value_string.rs
app_dx/src/states/: connection_state.rs  mod.rs  resources_tool_state.rs
assets/: app_dx-3d8df721c47afea6.js  app_dx-3d8df721c47afea6.js.br  app_dx-8598b8fdb806a3d3.js  app_dx-8598b8fdb806a3d3.js.br  app_dx-9ab4f6a5aa847fa9.js  app_dx-9ab4f6a5aa847fa9.js.br  app_dx-a3e3bf27c30d73f4.js  app_dx-a3e3bf27c30d73f4.js.br  app_dx_bg-118235616d83c91f.wasm  app_dx_bg-118235616d83c91f.wasm.br  app_dx_bg-18fcd746d348de0a.wasm  app_dx_bg-18fcd746d348de0a.wasm.br  app_dx_bg-5f4501f0809b474b.wasm  app_dx_bg-5f4501f0809b474b.wasm.br  app_dx_bg-cd839ec204114b37.wasm  app_dx_bg-cd839ec204114b37.wasm.br  favicon.png.br  input-range.scss  input-range.scss.br  main-20fa07d3bc7c6d96.css  main-20fa07d3bc7c6d96.css.br  main-41539d2a057d387a.css  main-41539d2a057d387a.css.br
client/: Cargo.toml
client/src/: component.rs  entity_item.rs  entity_kind.rs  lib.rs
(+40 files in other folders)
