[package]
name = "app_dx"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
client = { path = "../client" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1.44", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
gloo-timers = { version = "0.3", features = ["futures"] }
